@@ -56,6 +56,7 @@ extern boolean clfastparm; // checkparm of -fast
 
 extern boolean nosfxparm;
 extern boolean nomusicparm;
+extern int ffmap;
 
 extern int use_startmap;
 extern boolean redrawsbar, redrawborder;
